classDiagram
    User <|-- ListEntry : created by
    User --|> Role : has Role
    Role --|> Authority : has Authority

    class User{
        +email
        +firstName
        +lastName
        +password
    }

    class ListEntry{
      +title
      +text
      +importance
      +creationDate
    }

    class Role{
      +name
    }

    class Authority {
      +name
    }